--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Lorem, ipsum dolor.</header>
+    <header>
+        <div id="header-text">
+
+        </div>
+    </header>
 
     <main>
         <header id="div-intro">
