--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <header id="div-intro">
             <div class="form-contained">
-                <p>Hola! Quien eres?</p>
+                <p>Hola! Quienes eres?</p>
                 <select id="select-user">
                     <option value=""></option>
                 </select>
