--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
         <div id="header-container">
             <div id="header-text">
-                <iframe src="https://giphy.com/embed/3d1s4wUv4cK1TafqlB" width="70%" height="70%" frameBorder="0"></iframe>
+                <iframe src="https://giphy.com/embed/3d1s4wUv4cK1TafqlB" width="120px" frameBorder="0"></iframe>
                 <h1 id="happybd-h1">Zorionak!!!</h1>
-                <iframe src="https://giphy.com/embed/26FAMbSfNaxcAdj9DQ" width="70%" height="70%" frameBorder="0"></iframe>    
+                <iframe src="https://giphy.com/embed/26FAMbSfNaxcAdj9DQ" width="120px" frameBorder="0"></iframe>    
             </div>
 
             <div class="form-contained" id="color-theme-choice">
