--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     
         <div id="header-container">
             <div id="header-text">
-                <img src="./img/pantoja.gif" alt="Animated GIF of Pantoja in disbelief" width="120px">
-                <h1 id="happybd-h1">Zorionak!!!</h1>
-                <img src="./img/campos.gif" alt="Aimated GIF of Campos showing thumbs up" width="150px">  
+                <img src="./img/pantoja.gif" alt="Animated GIF of Pantoja in disbelief" width="15%">
+                <h1 id="happybd-h1"></h1>
+                <img src="./img/campos.gif" alt="Aimated GIF of Campos showing thumbs up" width="15%">  
             </div>
 
             <div class="form-contained" id="color-theme-choice">
